[project]
name = "yuanyang25-wechat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ChenghaoLi", email = "lichenghaongyd@qq.com" }
]
dependencies = [
    "flask>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yuanyang25_wechat"]
